# tera

./: .gitignore  INSTALL.txt  README.md  pyproject.toml
Docs/: Configuration_Ref.md  Workbench_API.md
Examples/: Continuous_Arch.ipynb  Continuous_C2E2.ipynb  Continuous_Extra.ipynb  Continuous_LR.ipynb  Continuous_SingleStep.ipynb  Hybrid.ipynb  Hybrid_Arch.ipynb  Hybrid_C2E2.ipynb  INTLAB_ShrinkWrap_ToyExample.py  Stochastic.ipynb  Stochastic_AMGF.ipynb  Stochastic_Textbook.ipynb  Stochastic_Xue.ipynb
Examples/Benchmarks/: AMGF_benchmarks.py  ARCH_benchmarks.py  C2E2_benchmarks.py  FLOWSTAR_benchmarks.py  INTLAB_benchmarks.py  JUILIAREACH_benchmarks.py  Xue_benchmarks.py  textbook_benchmarks.py
TERA/: .gitignore  __init__.py  requirements.txt
TERA/Hybrid/: HybridModel.py  HybridReach.py  Intersection.py  ModeSolver.py
TERA/Stochastic/: Plotter.py  Simulator.py  StochasticReach.py
TERA/TMCore/: Interval.py  Polynomial.py  TMComputer.py  TMVector.py  TaylorModel.py
TERA/TMFlow/: Picard.py  Precondition.py  Remainder.py  TMReach.py
TERA/Workbench/: Report.py  Results.py  Task.py  TaskConfig.py  Visualizer.py
